Fixed document title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
 
     <div class="main">
-        <h1>VersionOne JIRA Integration</h1>
+        <h1>VersionOne Integration for JIRA</h1>
         <h2>Introduction</h2>
         <p>
             The VersionOne Integration for JIRA creates stories and defects in VersionOne based on issues found in JIRA. Using this integration, your organization 
