--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         <p>
             For agile development teams using JIRA and VersionOne, who need
 			to integrate their issue management with agile project management,
-			the VersionOne JIRA Integration (V1JIRA) is a bridge that transfers
-			issues in JIRA into defects or stories in VersionOne. V1JIRA creates
+			the VersionOne Integration fir JIRA is a bridge that transfers
+			issues in JIRA into defects or stories in VersionOne. The integration creates
 			defects or stories in VersionOne based on issues in JIRA. Using this
 			integration your organization can manage and triage issues reported
 			by customers and promote them to VersionOne for prioritization,
 			estimation, planning, and implementation once you determine
 			development work is necessary. When the work is completed in
-			VersionOne, V1JIRA updates JIRA to reflect this change.
+			VersionOne, the integration updates JIRA to reflect this change.
         </p>
 
         <p>
@@ -81,7 +81,7 @@
         </p>
 
         <p>
-            The following sequence diagram illustrates how V1JIRA interacts with
+            The following sequence diagram illustrates how the integration interacts with
 			JIRA and VersionOne.<br />
             <br />
             <a class="fancybox" href="screenshots/sequencediagram.png" title="Sequence Diagram">
@@ -130,7 +130,7 @@
         <ol>
             <li>Determine Install Location
 				<p>
-                    V1JIRA can be installed on any server with network access to
+                    The integration can be installed on any server with network access to
 					both VersionOne and JIRA. Exact placement should be determined by
 					your internal software management requirements. The integration
 					server must meet the System Requirements stated above.
@@ -138,7 +138,7 @@
             </li>
             <li>Extract Files
 				<p>
-                    Download V1JIRA using the link above and extract it into a
+                    Download the integration using the link above and extract it into a
 					folder of your choice.
                 </p>
             </li>
@@ -183,7 +183,7 @@
                 <p>
                     This command installs the service so it will will run under
 					the account NT AUTHORITY\Local Service. Local Service must be given
-					access privileges to the directory where the V1JIRA executable was
+					access privileges to the directory where the the integration executable was
 					installed so it can store its state and write to log files. Follow
 					the steps below to change the security on the installation
 					directory:
@@ -238,7 +238,7 @@
 					&quot;remote&quot; but these can be changed to suit your needs.
                 </p>
                 <p class='info'>
-                    Although V1JIRA does not require administrator
+                    Although the integration does not require administrator
 					access to run, there are some validation rules that can only be
 					checked with a JIRA administrator role. To help check first-time
 					configuration, the recommended approach is to elevate the
