more documentation and screenshot updates
S-52509

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </ul>
             </li>
             <li>Do you need a custom field to hold a URL to the VersionOne
-				defect?
+				Asset?
 				<p>
                     By default the integration puts the VersionOne defect information
 					in the &quot;Comments&quot; section of the Issue. This information
@@ -249,8 +249,7 @@
 					another field to hold this data necessary. To do this create the
 					custom field and note the 'fieldId' value. This value is available
 					to the JIRA Administrator. From the &quot;View Custom Fields&quot;
-					page, select the &quot;Screens&quot; link in the
-					&quot;Operations&quot; column for the desired field. In the URL,
+					page, select the &quot;Screens&quot; link under the settings &quot;Cog&quot; for the desired custom field. In the URL,
 					note the 'fieldId' value.<br />
 
                     <a class="fancybox" href="screenshots/JIRACustomField.png" title="JIRA Custom Field">
