Fixed formatting issues, some content updates

--- a/index.html
+++ b/index.html
@@ -9,27 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/jquery.fancybox.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="scripts/jquery.fancybox.js"></script>
-
-    <style type="text/css">
-        .auto-style1 {
-            width: 343px;
-        }
-        .auto-style2 {
-            width: 343px;
-            height: 34px;
-        }
-        .auto-style3 {
-            height: 34px;
-        }
-        .auto-style4 {
-            height: 51px;
-        }
-        .auto-style5 {
-            font-weight: normal;
-        }
-    </style>
-
-    </head>
+</head>
 
 <body>
 
@@ -73,7 +53,7 @@
         <p>
             For agile development teams using JIRA and VersionOne, and who need
             to integrate their issue management with agile project management,
-            the IssueSync is a bridge that transforms
+            VersionOne IssueSync for JIRA is an integration that transforms
             JIRA Issues into Workitems (Defects or Stories) in VersionOne. Using this
             integration, an organization can manage and triage issues reported
             by customers and promote them to VersionOne for prioritization,
@@ -81,12 +61,11 @@
         </p>
 
         <p>
-            Once the integration is installed and configured, JIRA users
-            can specify which Issues require engineering attention and they will
-            automatically appear as Worktiems in VersionOne.
-            Additionally, when the Workitem is closed in VersionOne, the
+            Once the integration is installed and configured, JIRA users can specify which issues require engineering attention and those issues will
+            automatically appear as Workitems in VersionOne.
+            Additionally, when the Workitems are closed in VersionOne, the
             integration updates the JIRA Issue to reflect this change. JIRA
-            Issues that require engineering attention are identified using
+            issues that require engineering attention are identified using
             JIRA filters.
         </p>
 
@@ -134,7 +113,7 @@ end
             </li>
             <li>JIRA:
                 <ul>
-                    <li>Versions 5.2 and 6.0 or higher. Integration with older versions of JIRA may continue to work, but are no longer supported by VersionOne.</li>
+                    <li>Versions 5.2 and 6.0 or higher. Integration with older versions of JIRA may work, but are no longer supported by VersionOne.</li>
                 </ul>
             </li>
         </ul>
@@ -155,7 +134,7 @@ end
 
         <p>
             These installation instructions assume that JIRA and VersionOne are already
-            installed, configured, and working properly.
+            installed and working properly.
         </p>
         <ol>
             <li>Determine Install Location
@@ -173,7 +152,7 @@ end
                 </p>
             </li>
             <li>Configure
-                <p>Configuration for the JIRA Integration is a 3 step process.</p>
+                <p>Configuration for the Integration is a 3 step process.</p>
                 <ol>
                     <li><a href="#VersionOneJIRAIntegration-ConfigureJIRA">Configure JIRA</a></li>
                     <li><a href="#VersionOneJIRAIntegration-ConfigureVersionOne">Configure VersionOne</a></li>
@@ -192,14 +171,14 @@ end
 
         <p>
             This section describes how to modify your JIRA instance for use
-            with VersionOne. Before you begin, you need decide if you want to
-            Assign or Label the JIRA Issues you want visible in VersionOne.
+            with the integration. Before you begin, you need decide if you want to
+            the Assign or Label method to indicate the JIRA issues you want visible in VersionOne.
         </p>
 
         <ol>
-            <li>Select or Create a JIRA User.
+            <li>Select or Create a JIRA User
                 <p>
-                    The integration requires a valid JIRA User ID and a Password in order to connect. This user must have sufficient rights to accept work and modify issues (i.e. must be assigned to the Developer Role on the project). This user must also have rights to the actions being performed by the integration (for example, the user must have rights to close Issues).</p>
+                    The integration requires a valid JIRA User ID and a Password in order to connect to JIRA. This user must have sufficient rights to accept work and modify issues (i.e. must be assigned to the Developer Role on the project). This user must also have rights to the actions being performed by the integration (for example, the user must have rights to close Issues).</p>
                 <p class='info'>
                     Although the integration does not require administrator
                     access to run, there are some validation rules that can only be
@@ -208,7 +187,7 @@ end
                     integration user to Administrator. After the integration has been
                     verified (start the integration in the below steps) and before
                     starting as a service (install as Windows Service in the below
-                    steps), reduce the JIRA access to Developer Role. Then you can
+                    steps), reduce the JIRA access to the Developer Role. Then you can
                     safely ignore log warnings about validation rules that require
                     administrator access.
                 </p>
@@ -223,7 +202,7 @@ end
                 </p>
                 <p>
                     The results of a JIRA filter are used to determine which JIRA
-                    Issues will be transferred to VersionOne. By using a JIRA Filter,
+                    Issues will be transferred to VersionOne. By using a JIRA filter,
                     you can make the integration fit with your existing JIRA workflow
                     and fields. The details of writing such a filter are beyond the
                     scope of this document; however, the following are some simple
@@ -246,8 +225,7 @@ end
                             </a>&nbsp;
                             </p>
                             <p class='info'>
-                                This method is not supported in JIRA 5.2.
-                            </p>                        
+                                This method is not supported when integrating with JIRA 5.2 or earlier.</p>                        
                     </li>
                     <li>Label Filter
 						<p>
@@ -272,9 +250,7 @@ end
                 </ul>
             </li>
             <li>Create a Custom Field to hold the URL to the VersionOne Workitem.
-				<p>
-                    <span class="auto-style5"><strong>By default the integration puts the VersionOne Workitem information in the &quot;Comments&quot; section of the Issue. This information includes a URL to the VersionOne Workitem. You may optionally add another field to hold this data as necessary. To do this create the JIRA Custom Field and note the &#39;fieldId&#39; value in the JIRA URL. This value is available to the JIRA Administrator. </strong> </span><a class="fancybox" href="screenshots/JIRACustomField.png" title="JIRA Custom Field">
-                        &nbsp;</a></p>
+				<p>By default the integration puts the VersionOne Workitem information in the &quot;Comments&quot; section of the Issue. This information includes a URL to the VersionOne Workitem. You may optionally add another field to hold this data as necessary. To do this create the JIRA Custom Field and note the &#39;fieldId&#39; value in the JIRA URL. This value is available to the JIRA Administrator. </strong> </span><a class="fancybox" href="screenshots/JIRACustomField.png" title="JIRA Custom Field"></p>
             </li>
         </ol>
 
@@ -295,11 +271,11 @@ end
                 </p>
             </li>
             <li>Determine where to store the JIRA ID
-				<p class="auto-style5">
-                    <strong>The integration needs a text field in VersionOne to store the JIRA
-					identifier; by default this is the </strong> <em><strong>Reference</strong></em><strong> field. If you
+				<p>
+                    The integration needs a text field in VersionOne to store the JIRA
+					identifier; by default this is the <em><strong>Reference</strong></em> field. If you
 					are already using this field, you'll need to create a custom text
-					field in VersionOne and note the name.</strong>
+					field in VersionOne and note the name.
                 </p>
             </li>
         </ol>
@@ -312,8 +288,7 @@ end
             <code>ServiceHostConfigTool.exe</code>
         </p>
         <p>
-            The following section describes how to configure your JIRA
-            integration using the configuration tool.
+            The following section describes how to configure the integration using the configuration tool.
         </p>
         <ol>
             <li>On the General tab specify your VersionOne connection
@@ -329,28 +304,28 @@ end
                 <table>
                     <tbody>
                         <tr>
-                            <th class="auto-style1">Field</th>
+                            <th>Field</th>
                             <th>Description</th>
                         </tr>
                         <tr>
-                            <td class="auto-style1"> Authentication</td>
-                            <td> The method your VersionOne instance uses to authenticate with VersionOne server.</td>
+                            <td>Authentication</td>
+                            <td>The <a href="http://community.versionone.com/Developers/Developer-Library/Documentation/API_Authentication">API authentication method</a> used by the integration to connect to the VersionOne server.</td>
                         </tr>
                         <tr>
-                            <td class="auto-style2"> Access Token</td>
-                            <td class="auto-style3"> The Access Token provided by VersionOne for your application.</td>
+                            <td>Access Token</td>
+                            <td>The access token generated for the VersionOne member account that the integration will use.</td>
                         </tr>
                         <tr>
-                            <td class="auto-style1">Server URL</td>
+                            <td>Server URL</td>
                             <td>This is the URL to your VersionOne server.</td>
                         </tr>
                         <tr>
-                            <td class="auto-style1">Username</td>
-                            <td>VersionOne user that will create Workitems (Defects and Stories).</td>
+                            <td>Username</td>
+                            <td>VersionOne user that will create Workitems (Defects and Stories), used only when not using an access token.</td>
                         </tr>
                         <tr>
-                            <td class="auto-style1">Password</td>
-                            <td>Password for the specified VersionOne user.</td>
+                            <td>Password</td>
+                            <td>Password for the specified VersionOne user, used only when not using an access token.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -390,7 +365,7 @@ end
                 </table>
             </li>
             <li>Once the VersionOne parameters are specified, press the Validate
-				button to continue.&nbsp; You should see a &quot;VersionOne settings are valid&quot; message appear before you can advance to the next step.</li>
+				button to continue. You should see a &quot;VersionOne settings are valid&quot; message appear before you can advance to the next step.</li>
             <li>In the Workitems section, specify the VersionOne field that will hold the JIRA ID.
 				<p>
                     <a class="fancybox" href="screenshots/Config_V1Workitems.png" title="Workitems Configuration">
@@ -407,7 +382,7 @@ end
                         <tr>
                             <td>Reference Field Name</td>
                             <td>VersionOne field used to hold JIRA ID; by default this is
-								the Reference field.&nbsp; If you created a custom field in VersionOne for this value, enter it here.</td>
+								the Reference field. If you created a custom field in VersionOne for this value, enter it here.</td>
                         </tr>
                         <tr>
                             <td>Disabled</td>
@@ -474,8 +449,8 @@ end
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="auto-style4">URL Template</td>
-                                    <td class="auto-style4">Template for URL to access specific Issue in JIRA.
+                                    <td>URL Template</td>
+                                    <td>Template for URL to access specific Issue in JIRA.
 										/browse/#key# is replaced with the JIRA Issue ID. This field is used
 										to create links from VersionOne to JIRA.</td>
                                 </tr>
@@ -639,7 +614,7 @@ end
                     <li>Click the Delete selected row button.</li>
                 </ol>
             </li>
-            <li>Save your changes and exit the ServiceHost configuration tool.</li>
+            <li>Save your changes and exit the configuration tool.</li>
         </ol>
 
         <h3><a name="VersionOneJIRAIntegration-RunIntegration"></a>Run Integration</h3>
@@ -650,7 +625,7 @@ end
             </li>
             <li>Test the integration
 				<p>
-                    To ensure the integration is working, perform the following
+                    To ensure the integration is working properly, perform the following
 					steps:
                 </p>
                 <ol>
@@ -669,8 +644,9 @@ end
                     <code>VersionOne.ServiceHost.exe --install</code>
                 </p>
                 <p>
-                    This command installs the service so it will will run under
-					the account NT AUTHORITY\Local Service. Local Service must be given
+                    This command installs the 
+                    integration as a Windows service that will will run under
+					the NT AUTHORITY\Local Service account. The Local Service account must be given
 					access privileges to the directory where the the integration executable was
 					installed so it can store its state and write to log files. Follow
 					the steps below to change the security on the installation
@@ -694,7 +670,7 @@ end
             <li>If you cannot connect to VersionOne:<ul>
                 <li>Verify the URL of your VersionOne instance.</li>
                 <li>Verify that you have chosen the correct authentication type for your VersionOne instance.<ul>
-                    <li>If your authenication type is Access Token and your token is entered into the appropriate box and you are unable to connect, you may need to get a new Access Token from VersionOne. Check with your administrator. </li>
+                    <li>If your authenication type is Access Token and your token is entered into the appropriate box and you are unable to connect, you may need to generate a new one. </li>
                     </ul>
                 </li>
                 </ul>
@@ -709,7 +685,7 @@ end
                     <li>Enter or verify those values in the integration configuration tool.</li>
                     </ul>
                 </li>
-                <li>Verify the JIRA Filter Ids for Create Defect and Create Story.<ul>
+                <li>Verify the JIRA Filter IDs for Create Defect and Create Story.<ul>
                     <li>Click on the Issues menu and select your desired Filter name.</li>
                     <li>Check the browser URL for ?filter= and make note of the Id after the =.</li>
                     <li>Enter or verify that value in the appropriate field of the integration configuration tool.</li>
@@ -721,12 +697,9 @@ end
         <h3><a name="VersionOneJIRAIntegration-Technology"></a>Technology</h3>
         <ul>
             <li>The VersionOne Integration for TFS was developed in C# using Visual Studio 2013.</li>
-            <li>The TFS Listener Installer was developed using <a href="http://wix.sourceforge.net/index.html">WIX</a>.</li>
             <li>Source code is available in a <a href="https://github.com/versionone/VersionOne.Integration.JIRA">GitHub repo</a>.</li>
             <li>Previous releases of this integration are available in the <a href="http://appcatalog.versionone.com/VersionOne.Integration.JIRA">VersionOne Application Catalog</a>.</li>
         </ul>
-        <p>
-            &nbsp;</p>
     </div>
 </body>
 </html>
